[package]
name = "history-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = "2.0.1"
chrono = "0.4.41"
serde = "1.0.219"
sqlx = "0.8.6"
thiserror = "2.0.16"
tokio = {version = "1.47.1", features = ["full"]}
uuid = {version = "1.18.0", features = ["v4", "v7"]}
