[package]
name = "history-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = "2.0.1"
chrono = "0.4.41"
ed25519-dalek = {version = "2.2.0", features = ["rand_core"]}
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.8"
serde = "1.0.219"
sha2 = "0.10.9"
sqlx = "0.8.6"
thiserror = "2.0.3"
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = "0.7.16"
uuid = {version = "1.18.0", features = ["v4", "v7"]}
